[tool.poetry]
name = "rainbow"
version = "0.1.0"
description = "A project that utilizes the sense-hat library for Python 3"
authors = ["Viktor Konkov <raspberry400@mail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sense-hat = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

