[tool.poetry]
name = "rainbow"
version = "0.1.0"
description = "A project that utilizes the sense-hat library for Python 3"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sense-hat = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rainbow = "main:main"  # Assuming main.py contains a function named main
